--- a/trunk/src/eepskye/src/mixerdialog.ui
+++ b/trunk/src/eepskye/src/mixerdialog.ui
@@ -6,15 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>315</width>
+    <width>344</width>
     <height>581</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <family>Sans Serif</family>
+    <pointsize>8</pointsize>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="eepe.qrc">
+   <iconset>
     <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
@@ -37,9 +43,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>410</y>
-     <width>291</width>
-     <height>135</height>
+     <y>420</y>
+     <width>321</width>
+     <height>121</height>
     </rect>
    </property>
   </widget>
@@ -47,8 +53,8 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>390</y>
-     <width>45</width>
+     <y>400</y>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
@@ -60,9 +66,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>320</y>
+     <y>310</y>
      <width>291</width>
-     <height>71</height>
+     <height>83</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0">
@@ -221,7 +227,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QComboBox" name="curvesCB">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>200</x>
      <y>230</y>
      <width>74</width>
      <height>20</height>
@@ -234,7 +240,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QComboBox" name="diffcurveCB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>230</y>
      <width>84</width>
      <height>20</height>
@@ -253,11 +259,16 @@ p, li { white-space: pre-wrap; }
      <string>Differential</string>
     </property>
    </item>
+   <item>
+    <property name="text">
+     <string>Expo</string>
+    </property>
+   </item>
   </widget>
   <widget class="QComboBox" name="switchesCB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>160</y>
      <width>74</width>
      <height>20</height>
@@ -271,7 +282,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   <widget class="QCheckBox" name="trimChkB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>120</y>
      <width>16</width>
      <height>16</height>
@@ -287,7 +298,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   <widget class="QCheckBox" name="lateOffsetChkB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>100</y>
      <width>16</width>
      <height>16</height>
@@ -305,20 +316,20 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
     <rect>
      <x>10</x>
      <y>100</y>
-     <width>55</width>
+     <width>101</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Late Offset</string>
+    <string>Fix Offset</string>
    </property>
   </widget>
   <widget class="QCheckBox" name="offsetGvChkB">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>200</x>
      <y>70</y>
-     <width>47</width>
+     <width>101</width>
      <height>18</height>
     </rect>
    </property>
@@ -341,7 +352,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   <widget class="QComboBox" name="weightCB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>40</y>
      <width>74</width>
      <height>20</height>
@@ -354,7 +365,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   <widget class="QSpinBox" name="weightSB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>40</y>
      <width>81</width>
      <height>20</height>
@@ -364,7 +375,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   <widget class="QComboBox" name="offsetCB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>70</y>
      <width>74</width>
      <height>20</height>
@@ -377,7 +388,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   <widget class="QSpinBox" name="offsetSB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>70</y>
      <width>81</width>
      <height>20</height>
@@ -387,9 +398,9 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   <widget class="QCheckBox" name="weightGvChkB">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>200</x>
      <y>40</y>
-     <width>47</width>
+     <width>101</width>
      <height>18</height>
     </rect>
    </property>
@@ -414,7 +425,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
     <rect>
      <x>10</x>
      <y>160</y>
-     <width>31</width>
+     <width>81</width>
      <height>16</height>
     </rect>
    </property>
@@ -425,7 +436,7 @@ If blank then the mix is considered to be &quot;ON&quot; all the time.</string>
   <widget class="QComboBox" name="warningCB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>260</y>
      <width>64</width>
      <height>20</height>
@@ -461,7 +472,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
     <rect>
      <x>10</x>
      <y>290</y>
-     <width>42</width>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
@@ -472,7 +483,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
   <widget class="QCheckBox" name="FMtrimChkB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>140</y>
      <width>16</width>
      <height>16</height>
@@ -485,17 +496,17 @@ Setting this value will cause a beep to be emmitted when this value is active.</
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="label_10">
+  <widget class="QLabel" name="label_expo_output">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>140</y>
-     <width>74</width>
+     <width>101</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Flightmode Trim</string>
+    <string>Disable Expo/Dr</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
@@ -503,7 +514,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
     <rect>
      <x>10</x>
      <y>120</y>
-     <width>57</width>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
@@ -516,7 +527,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
     <rect>
      <x>10</x>
      <y>70</y>
-     <width>31</width>
+     <width>81</width>
      <height>16</height>
     </rect>
    </property>
@@ -529,7 +540,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
     <rect>
      <x>10</x>
      <y>40</y>
-     <width>34</width>
+     <width>91</width>
      <height>16</height>
     </rect>
    </property>
@@ -542,7 +553,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>33</width>
+     <width>51</width>
      <height>16</height>
     </rect>
    </property>
@@ -553,7 +564,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
   <widget class="QComboBox" name="sourceCB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>10</y>
      <width>74</width>
      <height>20</height>
@@ -568,7 +579,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
     <rect>
      <x>10</x>
      <y>260</y>
-     <width>40</width>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
@@ -581,7 +592,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
     <rect>
      <x>10</x>
      <y>230</y>
-     <width>29</width>
+     <width>41</width>
      <height>16</height>
     </rect>
    </property>
@@ -592,7 +603,7 @@ Setting this value will cause a beep to be emmitted when this value is active.</
   <widget class="QComboBox" name="mltpxCB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>290</y>
      <width>77</width>
      <height>20</height>
@@ -626,7 +637,7 @@ This determines how mixer values are added.
   <widget class="QCheckBox" name="curveGvChkB">
    <property name="geometry">
     <rect>
-     <x>270</x>
+     <x>290</x>
      <y>230</y>
      <width>47</width>
      <height>18</height>
@@ -651,7 +662,7 @@ This determines how mixer values are added.
   <widget class="QSpinBox" name="curvesSB">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>200</x>
      <y>230</y>
      <width>81</width>
      <height>20</height>
@@ -661,7 +672,7 @@ This determines how mixer values are added.
   <widget class="QCheckBox" name="Fm6CB">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>230</x>
      <y>200</y>
      <width>16</width>
      <height>20</height>
@@ -677,7 +688,7 @@ This determines how mixer values are added.
   <widget class="QCheckBox" name="Fm5CB">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>210</x>
      <y>200</y>
      <width>16</width>
      <height>20</height>
@@ -693,7 +704,7 @@ This determines how mixer values are added.
   <widget class="QCheckBox" name="Fm4CB">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>190</x>
      <y>200</y>
      <width>16</width>
      <height>20</height>
@@ -709,7 +720,7 @@ This determines how mixer values are added.
   <widget class="QCheckBox" name="Fm3CB">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>170</x>
      <y>200</y>
      <width>16</width>
      <height>20</height>
@@ -725,7 +736,7 @@ This determines how mixer values are added.
   <widget class="QCheckBox" name="Fm2CB">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>150</x>
      <y>200</y>
      <width>16</width>
      <height>20</height>
@@ -741,7 +752,7 @@ This determines how mixer values are added.
   <widget class="QCheckBox" name="Fm1CB">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>130</x>
      <y>200</y>
      <width>16</width>
      <height>20</height>
@@ -757,7 +768,7 @@ This determines how mixer values are added.
   <widget class="QCheckBox" name="Fm0CB">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>200</y>
      <width>16</width>
      <height>20</height>
@@ -775,9 +786,14 @@ This determines how mixer values are added.
     <rect>
      <x>10</x>
      <y>200</y>
-     <width>71</width>
+     <width>91</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>8</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>Flight Modes</string>
@@ -786,7 +802,7 @@ This determines how mixer values are added.
   <widget class="QLabel" name="label_17">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>110</x>
      <y>180</y>
      <width>16</width>
      <height>20</height>
@@ -802,7 +818,7 @@ This determines how mixer values are added.
   <widget class="QLabel" name="label_18">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>130</x>
      <y>180</y>
      <width>16</width>
      <height>20</height>
@@ -818,7 +834,7 @@ This determines how mixer values are added.
   <widget class="QLabel" name="label_19">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>150</x>
      <y>180</y>
      <width>16</width>
      <height>20</height>
@@ -834,7 +850,7 @@ This determines how mixer values are added.
   <widget class="QLabel" name="label_20">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>170</x>
      <y>180</y>
      <width>16</width>
      <height>20</height>
@@ -850,7 +866,7 @@ This determines how mixer values are added.
   <widget class="QLabel" name="label_21">
    <property name="geometry">
     <rect>
-     <x>170</x>
+     <x>190</x>
      <y>180</y>
      <width>16</width>
      <height>20</height>
@@ -866,7 +882,7 @@ This determines how mixer values are added.
   <widget class="QLabel" name="label_22">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>210</x>
      <y>180</y>
      <width>16</width>
      <height>20</height>
@@ -882,7 +898,7 @@ This determines how mixer values are added.
   <widget class="QLabel" name="label_23">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>230</x>
      <y>180</y>
      <width>16</width>
      <height>20</height>
@@ -895,10 +911,21 @@ This determines how mixer values are added.
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
+  <widget class="QComboBox" name="sourceSwitchCB">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>10</y>
+     <width>74</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="whatsThis">
+    <string>The source for the mixer</string>
+   </property>
+  </widget>
  </widget>
- <resources>
-  <include location="eepe.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
