--- a/trunk/src/preferencesdialog.ui
+++ b/trunk/src/preferencesdialog.ui
@@ -132,7 +132,7 @@
      </item>
     </widget>
    </item>
-   <item row="9" column="1">
+   <item row="10" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -145,7 +145,7 @@
      </property>
     </spacer>
    </item>
-   <item row="10" column="1">
+   <item row="11" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -362,7 +362,7 @@ Mode 4:
      </property>
     </spacer>
    </item>
-   <item row="8" column="1">
+   <item row="9" column="1">
     <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,10,10" columnminimumwidth="0,0,0">
      <item row="0" column="2">
       <widget class="QPushButton" name="er9x_dnld">
@@ -387,7 +387,7 @@ Mode 4:
      </item>
     </layout>
    </item>
-   <item row="8" column="0">
+   <item row="9" column="0">
     <widget class="QLabel" name="label_5">
      <property name="text">
       <string>Current Version - er9x</string>
@@ -422,6 +422,37 @@ Mode 4:
     <widget class="QLabel" name="label_6">
      <property name="text">
       <string>Processor</string>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1">
+    <widget class="QComboBox" name="DefaultVersionCB">
+     <item>
+      <property name="text">
+       <string>1</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>2</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>3</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>4</string>
+      </property>
+     </item>
+    </widget>
+   </item>
+   <item row="8" column="0">
+    <widget class="QLabel" name="label_7">
+     <property name="text">
+      <string>Default EEPROM version</string>
      </property>
     </widget>
    </item>
