--- a/trunk/src/telemetryDialog.ui
+++ b/trunk/src/telemetryDialog.ui
@@ -752,6 +752,22 @@
       </rect>
      </property>
     </widget>
+    <widget class="QPushButton" name="startButtonLogging">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>10</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Log</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QComboBox" name="TelPortCB">
